# NDFEX

./: .gitignore  .gitmodules  ARISTA_CONFIG.md  CMakeLists.txt  LICENSE  Makefile  README.md  common.mk  ndfex.sh  report.md
bots/: CMakeLists.txt  Makefile  bot_runner.cpp  cmake_install.cmake  constant_fair_value.H  constant_fair_value.cpp  fair_value.H  fair_value.cpp  fair_value_mm.H  fair_value_mm.cpp  fair_value_stack_mm.H  fair_value_stack_mm.cpp  fair_value_taker.H  imbalance_taker.H  imbalance_taker.cpp  md_client.H  md_client.cpp  news_bot_runner.cpp  news_trader.H  news_trader.cpp  oe_client.H  oe_client.cpp  order_book.H  order_book.cpp  pressure_taker.H  pressure_taker.cpp  print_snapshots.cpp  random_taker.H  random_taker.cpp  random_walk_fair_value.H  random_walk_fair_value.cpp  reject_bot.cpp  resting_orders.H  resting_orders.cpp  smarter_bots.cpp  stable_bot_runner.cpp  stack_manager.H  stack_manager.cpp  trading_system.cpp
clearing-web-app/: next.config.js  package-lock.json  package.json
clearing-web-app/src/app/: globals.css  layout.js  page.js  page.module.css
clearing-web-app/src/pages/api/: socket.js
etf_engine/: Makefile  etf_bookkeeping.cpp  etf_bookkeeping.hpp  etf_engine.cpp  etf_engine.hpp  etf_engine_app  http_server.cpp  http_server.hpp  main.cpp  thread_safe_queue.cpp  users.txt
etf_engine/etf_tests/: Makefile  test_etf  test_framework.H  test_http.py  unit_test_bookkeeping.cpp
etf_service/: app.py  clearing_client.py  config.py  md_client.py  position_ledger.py  requirements.txt
etf_service/templates/: etf.html
market_data/: CMakeLists.txt  Makefile  cmake_install.cmake  mcast_listener.cpp  md_protocol.H  md_snapshots  md_snapshots.cpp  snapshot_client.H  snapshot_client.cpp  snapshot_writer.H  snapshot_writer.cpp  spsc_md_queue.H
matching_engine/: CMakeLists.txt  Makefile  clearing_mcast.H  clearing_mcast.cpp  clearing_protocol.H  cmake_install.cmake  exceptions.H  matching_engine.cpp  md_mcast.H  md_mcast.cpp  me_broker.H  order_ladder.H  order_ladder.cpp  spsc_md_queue.H  spsc_oe_queue.H  spsc_subscriber.H  symbol_definition.H  users.txt  utils.H  utils.cpp
matching_engine/tests/: CMakeLists.txt  Makefile  test_matching_engine  test_matching_engine.cpp  test_md_mcast.cpp  test_order_ladder  test_order_ladder.cpp  test_order_ladder_perf.cpp  test_spsc_md_queue  test_spsc_md_queue.cpp
news_system/: README.md  headline_generator.py  news_server.py  nlp_sentiment_analyzer.py  run_news_server.py  simplified_news_trader.cpp
order_entry/: oe_client_handler.H  oe_client_handler.cpp  oe_protocol.H  oe_server.H  oe_server.cpp  oe_stream_parser.H  oe_validator.H  oe_validator.cpp
order_entry/tests/: CMakeLists.txt  Makefile  test_oe_client_handler  test_oe_client_handler.cpp  test_oe_stream_parser  test_oe_stream_parser.cpp
scripts/: check_hftt_solarflare.py
special_order_tests/: Makefile  aon_tests  combined_tests  iceberg_tests  mock_subscriber.cpp  order_ladder_wrapper.cpp  test_framework.H  unit_test_aon.cpp  unit_test_combined.cpp  unit_test_iceberg.cpp
viewer/: CMakeLists.txt  Makefile  bbo_printer.cpp  md_viewer.cpp  pcap_printer.cpp
web_data/: CMakeLists.txt  Makefile  calc_pnl_position.py  clearing_client.H  clearing_client.cpp  clearing_data.cpp  web_data.cpp
